# wordpress-agent

./: .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt  run.sh
src/: agent.py  agent_prompt.txt  agent_tools.py  article_picker.py  config.py  image.py  main.py  run.py  send_post.py  serper.py  utils.py
src/article/: agent.py  config.py  image_generation.py  serper.py  utils.py
src/article/prompts/: agent_prompt.py  help_image_prompt.py  title_query_prompt.py
src/storage/: storage.py
src/telegram/: assistant.py  config.py  handlers.py  jobs.py  states.py
src/wordpress/: config.py  utils.py  wp_api_service.py  wp_uploader.py
